--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
+html { height: 100%;}
+
+body { margin: 15px; font-family: Roboto, "Helvetica Neue", sans-serif; }
