--- a/src/app/components/trainings-table/trainings-table.component.html
+++ b/src/app/components/trainings-table/trainings-table.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8">
-	<table mat-table class="full-width-table" matSort aria-label="Elements">
+	<table mat-table class="full-width-table" matSort aria-label="Elements" [dataSource]="dataSource">
 		<!-- Id Column -->
 		<ng-container matColumnDef="id">
 			<th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
@@ -7,15 +7,15 @@
 		</ng-container>
 
 		<!-- exercice Column -->
-		<ng-container matColumnDef="exercice">
+		<ng-container matColumnDef="name">
 			<th mat-header-cell *matHeaderCellDef mat-sort-header>Exercice</th>
-			<td mat-cell *matCellDef="let row">{{row.exercice}}</td>
+			<td mat-cell *matCellDef="let row">{{row.name}}</td>
 		</ng-container>
 
 		<!-- weight Column -->
 		<ng-container matColumnDef="weight">
-			<th mat-header-cell *matHeaderCellDef mat-sort-header>Weight</th>
-			<td mat-cell *matCellDef="let row">{{row.weight}}</td>
+			<th mat-header-cell *matHeaderCellDef mat-sort-header>Charge de travail</th>
+			<td mat-cell *matCellDef="let row">{{row.weight}} Kg</td>
 		</ng-container>
 
 		<!-- nbSeries Column -->
@@ -34,7 +34,6 @@
 				<button mat-mini-fab color="primary" (click)="onClickDelete(row.id)">
 					<mat-icon>delete</mat-icon>
 				</button>
-				{{row.id}}
 			</td>
 		</ng-container>
 
