--- a/src/app/components/trainings-table/trainings-table.component.html
+++ b/src/app/components/trainings-table/trainings-table.component.html
@@ -24,7 +24,13 @@
 			<td mat-cell *matCellDef="let row">{{row.nbSeries}}</td>
 		</ng-container>
 
-		<!-- nbSeries Column -->
+		<!-- lastUpdate Column -->
+		<ng-container matColumnDef="lastUpdate">
+			<th mat-header-cell *matHeaderCellDef mat-sort-header>Date MàJ</th>
+			<td mat-cell *matCellDef="let row">{{getDate(row.lastUpdate)}}</td>
+		</ng-container>
+
+		<!-- actions Column -->
 		<ng-container matColumnDef="actions">
 			<th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
 			<td mat-cell *matCellDef="let row">
