--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>Mon entrainement actuel</h1>
-<app-trainings></app-trainings>
+<!-- <app-login *ngIf="!loggedIn; else isLoggedIn"></app-login>
+<ng-template #isLoggedIn> -->
+<router-outlet></router-outlet>
+<!-- </ng-template> -->
+
